--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
+    <link rel="icon" type="image/x-icon" href="./img/icons/favicon-32x32.png">
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
   <body>
