index html changed

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" type="image/x-icon" href="./img/icons/favicon-32x32.png">
+    <link rel="manifest" href="/manifest.json">
+    <meta name="apple-mobile-web-app-title" content="pwa-english-dictionary">
+<meta name="apple-mobile-web-app-status-bar-style" content="black">
+<link href="./img/icons/apple-touch-icon-152x152.png" media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+<link href="./img/icons/apple-touch-icon-152x152.png" media="(device-width: 375px) and (device-height: 667px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+<link href="./img/icons/apple-touch-icon-120x120.png" media="(device-width: 621px) and (device-height: 1104px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+<link href="./img/icons/apple-touch-icon-152x152.png" media="(device-width: 375px) and (device-height: 812px) and (-webkit-device-pixel-ratio: 3)" rel="apple-touch-startup-image" />
+<link href="./img/icons/apple-touch-icon-180x180.png" media="(device-width: 768px) and (device-height: 1024px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+<link href="./img/icons/apple-touch-icon-180x180.png" media="(device-width: 834px) and (device-height: 1112px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+<link href="./img/icons/apple-touch-icon-180x180.png" media="(device-width: 1024px) and (device-height: 1366px) and (-webkit-device-pixel-ratio: 2)" rel="apple-touch-startup-image" />
+<link rel="apple-touch-icon"  href="./img/icons/apple-touch-icon-120x120.png">
+<link rel="apple-touch-icon-precomposed"  href="./img/icons/apple-touch-icon-120x120.png"> 
     <title>PWA English Dictionary</title>
   </head>
   <body>
